discussion/kv_engine/145171/145171_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42224: ep wip

Change-Id: I8e7858b5062171421b3311120b3f8e1a4a20f4da

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-02-04 09:46:16.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-04 10:00:08.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6915/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1752:17: error: no matching function for call to "couchstore_commit" [clang-diagnostic-error]
    errorCode = couchstore_commit(db, numCommitFailures);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:402:24: note: candidate function not viable: requires single argument "db", but 2 arguments were provided
    couchstore_error_t couchstore_commit(Db *db);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2818:15: error: no matching function for call to "couchstore_commit" [clang-diagnostic-error]
    errCode = couchstore_commit(db, kvctx.commitData.numCommitFailures);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:402:24: note: candidate function not viable: requires single argument "db", but 2 arguments were provided
    couchstore_error_t couchstore_commit(Db *db);
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6915/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1752:17:
error: no matching function for call to "couchstore_commit" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6915/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33377/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1752): error C2660: "couchstore_commit": function does not take 2 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33377/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28712/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1752:17:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28712/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8483/ : FAILURE

Compile error at [2021-02-04T09:52:17.554Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1752:56:
error: too many arguments to function ?couchstore_error_t couchstore_commit(Db*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8483/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8617/ : FAILURE

Compile error at [2021-02-04T09:48:16.775Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1752:56:
error: too many arguments to function ?couchstore_error_t couchstore_commit(Db*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8617/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8841/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7548/ : FAILURE

Compile error at [2021-02-04T09:49:16.969Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1752:17:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7548/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16389/ : FAILURE

Compile error at [2021-02-04T09:49:17.198Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1752:17:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16389/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5452/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-02-04 12:44:20.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
